# AlgoluxInterview

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindController.cmake
engine/: EKF.cpp  FilterBase.cpp  ParticleFilter.cpp
include/: EKF.h  FilterBase.h  ParticleFilter.h  robot_defs.h
